css-skills-complete

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,56 +1,66 @@
 body {
-    display: flex;
-    padding: 20px;
-    flex-direction: column;
-    gap: 100px;    
+  display: flex;
+  padding: 20px;
+  flex-direction: column;
+  gap: 100px;
 }
 
 button {
-    background-color: transparent;
-    border: 1px solid black;
+  background-color: transparent;
+  border: 1px solid black;
 }
 
 button:hover {
-    background-color: aqua;
-    border: 1px solid aqua;
-    color: white;
+  background-color: aqua;
+  border: 1px solid aqua;
+  color: white;
 }
 
 button:focus {
-    border: 4px solid green;
-    outline: 5px solid red;
-    outline-color: blue;
+  border: 4px solid green;
+  outline: 5px solid red;
+  outline-color: blue;
 }
 
 button:active {
-    background-color: red;
+  background-color: red;
 }
 
+
 div {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
 }
 
 .square {
-    width: 150px;
-    height: 150px;
-    border: 1px solid black;
+  width: 150px;
+  height: 150px;
+  border: 1px solid black;
 }
 
 div :last-child {
-    background-color: brown;
+  background-color: brown;
 }
 
 div :nth-child(even) {
-    background-color: chartreuse;
+  background-color: chartreuse;
 }
 
 div :nth-child(odd) {
-    background-color: coral;
+  background-color: coral;
 }
 
 div :first-child {
-    background-color: aqua;
+  background-color: aqua;
+}
+
+div :nth-of-type(p) {
+  color: darkgoldenrod;
+}
+
+a:visited {
+    color: green;
+    text-decoration-color: brown;
 }
